[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
image_hasher = "1.1"
whatlang = "0.16"
stop-words = "0.8"
seahash = "4.1"
thiserror = "1.0"
humantime = "2.1"

# ----------------------------

html5ever = "0.25"
markup5ever_rcdom = "0.2"
encoding_rs = "0.8"
